--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "from typing import Callable\n",
-    "import numpy as np"
+    "from typing import Callable, Tuple, Any\n",
+    "import numpy as np\n",
+    "import statistics"
    ]
   },
   {
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        "0.375"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,6 +182,29 @@
     "  def function_field(self, original: list[float], transformed: list[float], normalize: bool = True) -> float:\n",
     "    original_field, transformed_field = np.trapz(original), np.trapz(transformed)\n",
     "    return math.fabs(original_field - transformed_field) / (max(original_field, transformed_field) if normalize else 1)\n",
+    "\n",
+    "  def min(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    if show_diff:\n",
+    "      return min(original) - min(transformed)\n",
+    "    return min(transformed)\n",
+    "\n",
+    "  def max(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    if show_diff:\n",
+    "      return max(original) - max(transformed)\n",
+    "    return max(transformed)\n",
+    "\n",
+    "  def median(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    if show_diff:\n",
+    "      return statistics.median(original) - statistics.median(transformed)\n",
+    "    return statistics.median(transformed)\n",
+    "  \n",
+    "  def fft(self, transformed: list[float], show_plot: bool = False) -> Tuple[list[float], Any]:\n",
+    "    transformed_np_array = np.array(transformed)\n",
+    "    sp = np.fft.fft(transformed_np_array)\n",
+    "    freq = np.fft.fftfreq(transformed_np_array.shape[-1])\n",
+    "    if show_plot:\n",
+    "      plt.plot(freq, sp.real, freq, sp.imag)\n",
+    "    return sp, freq\n",
     "\n",
     "Metric().function_field([1,2,3,4,5,6,7,8,9], [1,1,1,-5,5,6,7,4,11])"
    ]
