--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -150,18 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.375"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, 1, 1, 1, 4, 5, 6, 7, 11]\n",
+      "0.9083333333333333\n"
+     ]
     }
    ],
    "source": [
@@ -350,7 +348,97 @@
     "      plt.plot(freq, sp.real, freq, sp.imag)\n",
     "    return sp, freq\n",
     "\n",
-    "Metric().function_field([1,2,3,4,5,6,7,8,9], [1,1,1,-5,5,6,7,4,11])"
+    "  def _mean(self, data: list[float]) -> float:\n",
+    "    return sum(data) / len(data)\n",
+    "\n",
+    "  def _covariance(self, x: list[float], y: list[float]) -> float:\n",
+    "    n = len(x)\n",
+    "    mean_x = self._mean(x)\n",
+    "    mean_y = self._mean(y)\n",
+    "    sum_distance = 0\n",
+    "    for i in range(n):\n",
+    "      sum_distance += (x[i] - mean_x) * (y[i] - mean_y)\n",
+    "    return sum_distance * 1/n\n",
+    "\n",
+    "  def covariance(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    x_list = [i for i in range(len(transformed))]\n",
+    "    if show_diff:\n",
+    "      return self._covariance(x_list, original) - self._covariance(x_list, transformed)\n",
+    "    return self._covariance(x_list, transformed)\n",
+    "\n",
+    "  def _corelation_pearson(self, x: list[float], y: list[float]) -> float:\n",
+    "    mean_x = self._mean(x)\n",
+    "    mean_y = self._mean(y)\n",
+    "    sum_distance = 0\n",
+    "    sum_distance_square_x = 0\n",
+    "    sum_distance_square_y = 0\n",
+    "    for i in range(len(x)):\n",
+    "      distance_x = (x[i] - mean_x)\n",
+    "      distance_y = (y[i] - mean_y)\n",
+    "      sum_distance += distance_x * distance_y\n",
+    "      sum_distance_square_x += distance_x ** 2\n",
+    "      sum_distance_square_y += distance_y ** 2\n",
+    "    return sum_distance / math.sqrt(sum_distance_square_x * sum_distance_square_y)\n",
+    "\n",
+    "  def corelation_pearson(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    x_list = [i for i in range(len(transformed))]\n",
+    "    if show_diff:\n",
+    "      return self._corelation_pearson(x_list, original) - self._corelation_pearson(x_list, transformed)\n",
+    "    return self._corelation_pearson(x_list, transformed)\n",
+    "\n",
+    "  def _corelation_spearman_on_injection(self, x: list[float], y: list[float]) -> float:\n",
+    "    data_len = len(x)\n",
+    "    n = data_len\n",
+    "    max_rang = data_len\n",
+    "    next_rang = max_rang\n",
+    "    x_rangs = [i + 1 for i in range(max_rang)]\n",
+    "    y_rangs = []\n",
+    "    y_sorted = sorted(y)\n",
+    "    print(y_sorted)\n",
+    "    i = 0\n",
+    "    while i < data_len:\n",
+    "      values_count = 1\n",
+    "      current_value = y[i]\n",
+    "      while i + values_count < data_len and y[i + values_count] == current_value:\n",
+    "        values_count += 1\n",
+    "      current_rang = sum(range(i, i + values_count)) / values_count\n",
+    "      for _ in range(values_count):\n",
+    "        y_rangs.append(current_rang)\n",
+    "      next_rang -= values_count\n",
+    "      i += values_count\n",
+    "    distance_sum = 0\n",
+    "    for i in range(data_len):\n",
+    "      distance_sum += (x_rangs[i] - y_rangs[i]) ** 2\n",
+    "    return 1 - ((6 * distance_sum) / (n * (n ** 2 - 1)))\n",
+    "\n",
+    "  def corelation_spearman(self, original: list[float], transformed: list[float], show_diff: bool = True) -> float:\n",
+    "    x_list = [i for i in range(len(transformed))]\n",
+    "    if show_diff:\n",
+    "      return self._corelation_spearman_on_injection(x_list, original) - self._corelation_spearman_on_injection(x_list, transformed)\n",
+    "    return self._corelation_spearman_on_injection(x_list, transformed)\n",
+    "\n",
+    "v = Metric().corelation_spearman([1,2,3,4,5,6,7,8,9], [1,1,1,-5,5,6,7,4,11], False)\n",
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(range(4))"
    ]
   },
   {
