--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -55,22 +55,9 @@
     "  compressed_data: list[Measurement] = []\n",
     "\n",
     "  # paper\n",
-    "  # PLR - Piecewise Linear Representation\n",
-    "  # pkdd99keogh_pazzani.pdf\n",
-    "  def compress_plr(self):\n",
-    "    pass\n",
-    "\n",
-    "  # paper\n",
     "  # ZIP - Zigzag-perceptually important point\n",
     "  # 10.1.1.672.9655.pdf\n",
     "  def compress_pip_vd(self): \n",
-    "    # todo\n",
-    "    pass\n",
-    "\n",
-    "  # paper\n",
-    "  # PAA - Piecewise Aggregate Approximation\n",
-    "  # kais_2000.pdf\n",
-    "  def compress_paa(self):\n",
     "    # todo\n",
     "    pass\n",
     "\n",
@@ -196,6 +183,14 @@
     "  config = {\n",
     "    \n",
     "  }\n",
+    "\n",
+    "  # paper\n",
+    "  # PLR - Piecewise Linear Representation\n",
+    "  # chapterPLR.pdf pkdd99keogh_pazzani.pdf \n",
+    "\n",
+    "  # paper\n",
+    "  # PAA - Piecewise Aggregate Approximation\n",
+    "  # kais_2000.pdf\n",
     "\n",
     "  def compress(self): \n",
     "    pass\n",
