--- a/sandbox/notebook_select_best_classic.ipynb
+++ b/sandbox/notebook_select_best_classic.ipynb
@@ -49,147 +49,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0\n",
-      "0\n",
-      "300 0\n",
-      "600 100\n",
-      "900 200\n",
-      "1200 300\n",
-      "1500 400\n",
-      "1800 500\n",
-      "2100 600\n",
-      "2400 700\n",
-      "2700 800\n",
-      "3000 900\n",
-      "3300 1000\n",
-      "3600 1100\n",
-      "3900 1200\n",
-      "4200 1300\n",
-      "4500 1400\n",
-      "4800 1500\n",
-      "5100 1600\n",
-      "5400 1700\n",
-      "5700 1800\n",
-      "6000 1900\n",
-      "6300 2000\n",
-      "6600 2100\n",
-      "6900 2200\n",
-      "7200 2300\n",
-      "7500 2400\n",
-      "7800 2500\n",
-      "8100 2600\n",
-      "8400 2700\n",
-      "8700 2800\n",
-      "9000 2900\n",
-      "9300 3000\n",
-      "9600 3100\n",
-      "9900 3200\n",
-      "9900 3300\n",
-      "100\n",
-      "35\n",
-      "35\n"
+      "CompressNTHS\n",
+      "\tcompression_rate:\t0.35\n",
+      "\tsum_differences:\t2.882062507135529\n",
+      "\tarithmetic_average:\t0.02882062507135529\n",
+      "\tstandard_derivative:\t0.08634639929437112\n",
+      "CompressMinMax\n",
+      "\tcompression_rate:\t0.5\n",
+      "\tsum_differences:\t2.2588701404928253\n",
+      "\tarithmetic_average:\t0.022588701404928253\n",
+      "\tstandard_derivative:\t0.06289878759161126\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 96>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=92'>93</a>\u001b[0m     \u001b[39mprint\u001b[39m(metric_result)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=93'>94</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompressors\u001b[39m.\u001b[39mitems())[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=95'>96</a>\u001b[0m AlgorythmSelector()\u001b[39m.\u001b[39;49mget_best(measurements)\n",
-      "\u001b[1;32m/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb Cell 4'\u001b[0m in \u001b[0;36mAlgorythmSelector.get_best\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=86'>87</a>\u001b[0m   compressor\u001b[39m.\u001b[39mcompress()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=87'>88</a>\u001b[0m   compressed_data \u001b[39m=\u001b[39m compressor\u001b[39m.\u001b[39mcompressed_data\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=88'>89</a>\u001b[0m   metric_result[name] \u001b[39m=\u001b[39m {\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=89'>90</a>\u001b[0m     \u001b[39m# 'compression_rate': self.metrics_containter.compression_ratio(data, compressed_data),\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=90'>91</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39msum_differences\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmetrics_containter\u001b[39m.\u001b[39;49msum_differences(data, compressed_data),\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=91'>92</a>\u001b[0m   }\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=92'>93</a>\u001b[0m \u001b[39mprint\u001b[39m(metric_result)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=93'>94</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompressors\u001b[39m.\u001b[39mitems())[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]\n",
-      "\u001b[1;32m/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb Cell 4'\u001b[0m in \u001b[0;36mMetric.sum_differences\u001b[0;34m(self, original, transformed, use_absolut_value)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=62'>63</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msum_differences\u001b[39m(\u001b[39mself\u001b[39m, original: List[Measurement], transformed: List[Measurement], use_absolut_value: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mfloat\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=63'>64</a>\u001b[0m   transformed \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_prepare_data(original, transformed)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=64'>65</a>\u001b[0m   differences \u001b[39m=\u001b[39m [original[i]\u001b[39m.\u001b[39mvalue \u001b[39m-\u001b[39m transformed[i]\u001b[39m.\u001b[39mvalue \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(original))]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=65'>66</a>\u001b[0m   \u001b[39mif\u001b[39;00m use_absolut_value:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=66'>67</a>\u001b[0m     differences \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(math\u001b[39m.\u001b[39mfabs, differences)\n",
-      "\u001b[1;32m/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb Cell 4'\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=62'>63</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msum_differences\u001b[39m(\u001b[39mself\u001b[39m, original: List[Measurement], transformed: List[Measurement], use_absolut_value: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mfloat\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=63'>64</a>\u001b[0m   transformed \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_prepare_data(original, transformed)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=64'>65</a>\u001b[0m   differences \u001b[39m=\u001b[39m [original[i]\u001b[39m.\u001b[39mvalue \u001b[39m-\u001b[39m transformed[i]\u001b[39m.\u001b[39mvalue \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(original))]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=65'>66</a>\u001b[0m   \u001b[39mif\u001b[39;00m use_absolut_value:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krzysztofpiaskowy/Documents/piaskowyk/milkyPressor/sandbox/notebook_select_best_classic.ipynb#ch0000001?line=66'>67</a>\u001b[0m     differences \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(math\u001b[39m.\u001b[39mfabs, differences)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "<src.data_compressor.other.compress_nths.CompressNTHS at 0x11bb4aa8eb0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from calendar import c\n",
-    "import math\n",
-    "from re import S\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import Tuple, Any, List\n",
-    "import numpy as np\n",
-    "import statistics\n",
-    "from src.data_type import Measurement\n",
-    "\n",
-    "class Metric:\n",
-    "\n",
-    "  def _strip_data(self, data: List[Measurement]):\n",
-    "    return [item.value for item in data]\n",
-    "\n",
-    "  def _interpolate_points(self, x: int, point_A: Measurement, point_B: Measurement) -> float:\n",
-    "    # return ((point_B.value - point_A.value) / (point_B.timestamp - point_A.timestamp)) * x \\\n",
-    "    #   + ((point_B.timestamp * point_A.value - point_A.timestamp * point_B.value) / (point_B.timestamp - point_A.timestamp))\n",
-    "    return 5\n",
-    "\n",
-    "  def _interpolate_data(self, original: List[Measurement], transformed: List[Measurement]):\n",
-    "    interpolated = []\n",
-    "    current_index = 0\n",
-    "    transformed_count = len(transformed)\n",
-    "    data_original_count = len(original)\n",
-    "    if data_original_count < 2:\n",
-    "      return original\n",
-    "    first = original[0]\n",
-    "    if first.timestamp != transformed[0].timestamp:\n",
-    "      transformed = [Measurement(first.value, first.timestamp)] + transformed\n",
-    "\n",
-    "    data_transformed_count = len(transformed)\n",
-    "    last = original[data_original_count - 1]\n",
-    "    if last.timestamp != transformed[data_transformed_count - 1].timestamp:\n",
-    "      transformed.append(Measurement(last.value, last.timestamp))\n",
-    "    \n",
-    "    last_index = 0\n",
-    "    for original_measurement in original:\n",
-    "      for i in range(current_index, transformed_count):\n",
-    "        last_index = i\n",
-    "        print(transformed[i].timestamp, original_measurement.timestamp)\n",
-    "        if transformed[i].timestamp == original_measurement.timestamp:\n",
-    "          print(i)\n",
-    "          interpolated.append(Measurement(original_measurement.value, original_measurement.timestamp))\n",
-    "        elif transformed[i].timestamp > original_measurement.timestamp:\n",
-    "          # print(i)\n",
-    "          current_index = i\n",
-    "          break\n",
-    "      if last_index == current_index:\n",
-    "        point_a = transformed[current_index - 1]\n",
-    "        point_b = transformed[current_index]\n",
-    "        x = original_measurement.timestamp\n",
-    "        y = self._interpolate_points(x, point_a, point_b)\n",
-    "        interpolated.append(Measurement(y, x))\n",
-    "        current_index += 1\n",
-    "    print(len(original))\n",
-    "    print(len(transformed))\n",
-    "    print(len(interpolated))\n",
-    "    return interpolated\n",
-    "\n",
-    "  def _prepare_data(self, original: List[Measurement], transformed: List[Measurement]):\n",
-    "    return self._interpolate_data(original, transformed)\n",
-    "\n",
-    "  def sum_differences(self, original: List[Measurement], transformed: List[Measurement], use_absolut_value: bool = True) -> float:\n",
-    "    transformed = self._prepare_data(original, transformed)\n",
-    "    differences = [original[i].value - transformed[i].value for i in range(len(original))]\n",
-    "    if use_absolut_value:\n",
-    "      differences = map(math.fabs, differences)\n",
-    "    return sum(differences)\n",
-    "\n",
-    "\n",
     "class AlgorythmSelector:\n",
     "\n",
     "  def __init__(self) -> None:\n",
     "    self.metrics_containter = Metric()\n",
     "    self.compressors: Dict[str, Compressor] = {\n",
     "      'CompressNTHS': CompressNTHS(),\n",
-    "      # 'CompressMinMax': CompressMinMax()\n",
+    "      'CompressMinMax': CompressMinMax()\n",
     "    }\n",
     "\n",
     "  def set_metrics(self):\n",
@@ -202,10 +99,15 @@
     "      compressor.compress()\n",
     "      compressed_data = compressor.compressed_data\n",
     "      metric_result[name] = {\n",
-    "        # 'compression_rate': self.metrics_containter.compression_ratio(data, compressed_data),\n",
+    "        'compression_rate': self.metrics_containter.compression_ratio(data, compressed_data),\n",
     "        'sum_differences': self.metrics_containter.sum_differences(data, compressed_data),\n",
+    "        'arithmetic_average': self.metrics_containter.arithmetic_average(data, compressed_data),\n",
+    "        'standard_derivative': self.metrics_containter.standard_derivative(data, compressed_data),\n",
     "      }\n",
-    "    print(metric_result)\n",
+    "    for key, metrics in metric_result.items():\n",
+    "      print(key)\n",
+    "      for name, value in metrics.items():\n",
+    "        print(f\"\\t{name}:\\t{value}\")\n",
     "    return list(self.compressors.items())[0][1]\n",
     "\n",
     "AlgorythmSelector().get_best(measurements)"
@@ -231,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
