--- a/sandbox/notebook_select_best_classic.ipynb
+++ b/sandbox/notebook_select_best_classic.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.signal_generator import SignalGenerator\n",
     "from src.metrics import Metric\n",
     "from src.data_type import Measurement\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "from src.data_compressor.other import CompressNTHS\n",
     "from src.data_compressor.other import CompressMinMax\n",
     "from src.data_compressor.other import CompressPWP\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,60 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompressNTHS\n",
-      "\tcompression_rate:\t0.35\n",
-      "\tsum_differences:\t3.3152032030069503\n",
-      "\tarithmetic_average:\t0.0331520320300695\n",
-      "\tstandard_derivative:\t0.10380867794406343\n",
-      "\tfunction_field:\t0.8662578139139322\n",
-      "\tdiff_of_min:\t-0.005541768036727568\n",
-      "\tdiff_of_max:\t0.0\n",
-      "\tmin_max_diff:\t0.005541768036727568\n",
-      "\tvalue_crossing:\t0.35416666666666663\n",
-      "\tpositive_value_crossing:\t0.35416666666666663\n",
-      "\tnegative_value_crossing:\t0.0\n",
-      "\tpeak_count:\t2\n",
-      "\tpositive_peak_count:\t0\n",
-      "\tnegative_peak_count:\t0\n",
-      "\tmedian:\t-0.003336635576042489\n",
-      "\tcovariance:\t-0.37330111679278755\n",
-      "\tcorelation_pearson:\t-0.15938858164426123\n",
-      "\tcorelation_spearman:\t7.002801120448154e-05\n",
-      "CompressMinMax\n",
-      "\tcompression_rate:\t0.5\n",
-      "\tsum_differences:\t2.5065048013717437\n",
-      "\tarithmetic_average:\t0.025065048013717436\n",
-      "\tstandard_derivative:\t0.07474189397270219\n",
-      "\tfunction_field:\t4.419247741670608\n",
-      "\tdiff_of_min:\t0.0\n",
-      "\tdiff_of_max:\t0.0\n",
-      "\tmin_max_diff:\t0.0\n",
-      "\tvalue_crossing:\t0.4807692307692307\n",
-      "\tpositive_value_crossing:\t0.0\n",
-      "\tnegative_value_crossing:\t-23.0\n",
-      "\tpeak_count:\t0\n",
-      "\tpositive_peak_count:\t0\n",
-      "\tnegative_peak_count:\t0\n",
-      "\tmedian:\t0.021254044047152067\n",
-      "\tcovariance:\t1.0145665669370394\n",
-      "\tcorelation_pearson:\t0.21066117973599469\n",
-      "\tcorelation_spearman:\t0.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<src.data_compressor.other.compress_nths.CompressNTHS at 0x1693bba9520>"
+       "<src.data_compressor.other.compress_nths.CompressNTHS at 0x10a44e910>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,30 +109,37 @@
     "      compressed_data = compressor.compressed_data\n",
     "      # vizualize(data, self.metrics_containter._interpolate_data(data, compressed_data))\n",
     "      metric_result[name] = {\n",
-    "        'compression_rate': self.metrics_containter.compression_ratio(data, compressed_data),\n",
-    "        'sum_differences': self.metrics_containter.sum_differences(data, compressed_data),\n",
-    "        'arithmetic_average': self.metrics_containter.arithmetic_average(data, compressed_data),\n",
-    "        'standard_derivative': self.metrics_containter.standard_derivative(data, compressed_data),\n",
-    "        'function_field': self.metrics_containter.function_field(data, compressed_data),\n",
-    "        'diff_of_min': self.metrics_containter.diff_of_min(data, compressed_data),\n",
-    "        'diff_of_max': self.metrics_containter.diff_of_max(data, compressed_data),\n",
-    "        'min_max_diff': self.metrics_containter.min_max_diff(data, compressed_data),\n",
-    "        'value_crossing': self.metrics_containter.value_crossing(data, compressed_data),\n",
-    "        'positive_value_crossing': self.metrics_containter.positive_value_crossing(data, compressed_data),\n",
-    "        'negative_value_crossing': self.metrics_containter.negative_value_crossing(data, compressed_data),\n",
-    "        'peak_count': self.metrics_containter.peak_count(data, compressed_data),\n",
-    "        'positive_peak_count': self.metrics_containter.positive_peak_count(data, compressed_data),\n",
-    "        'negative_peak_count': self.metrics_containter.negative_peak_count(data, compressed_data),\n",
-    "        'median': self.metrics_containter.median(data, compressed_data),\n",
-    "        'covariance': self.metrics_containter.covariance(data, compressed_data),\n",
-    "        'corelation_pearson': self.metrics_containter.corelation_pearson(data, compressed_data),\n",
-    "        'corelation_spearman': self.metrics_containter.corelation_spearman(data, compressed_data),\n",
+    "        'compression_rate': self.metrics_containter.compression_ratio_score(data, compressed_data) * 2,\n",
+    "        'sum_differences': self.metrics_containter.sum_differences_score(data, compressed_data),\n",
+    "        'arithmetic_average': self.metrics_containter.arithmetic_average_score(data, compressed_data),\n",
+    "        'standard_derivative': self.metrics_containter.standard_derivative_score(data, compressed_data),\n",
+    "        'function_field': self.metrics_containter.function_field_score(data, compressed_data),\n",
+    "        'diff_of_min': self.metrics_containter.diff_of_min_score(data, compressed_data),\n",
+    "        'diff_of_max': self.metrics_containter.diff_of_max_score(data, compressed_data),\n",
+    "        'min_max_diff': self.metrics_containter.min_max_diff_score(data, compressed_data),\n",
+    "        'value_crossing': self.metrics_containter.value_crossing_score(data, compressed_data),\n",
+    "        'positive_value_crossing': self.metrics_containter.positive_value_crossing_score(data, compressed_data),\n",
+    "        'negative_value_crossing': self.metrics_containter.negative_value_crossing_score(data, compressed_data),\n",
+    "        'peak_count': self.metrics_containter.peak_count_score(data, compressed_data),\n",
+    "        'positive_peak_count': self.metrics_containter.positive_peak_count_score(data, compressed_data),\n",
+    "        'negative_peak_count': self.metrics_containter.negative_peak_count_score(data, compressed_data),\n",
+    "        'median': self.metrics_containter.median_score(data, compressed_data),\n",
+    "        'covariance': self.metrics_containter.covariance_score(data, compressed_data),\n",
+    "        'corelation_pearson': self.metrics_containter.corelation_pearson_score(data, compressed_data),\n",
+    "        'corelation_spearman': self.metrics_containter.corelation_spearman_score(data, compressed_data),\n",
     "      }\n",
-    "    for key, metrics in metric_result.items():\n",
-    "      print(key)\n",
-    "      for name, value in metrics.items():\n",
-    "        print(f\"\\t{name}:\\t{value}\")\n",
-    "    return list(self.compressors.items())[0][1]\n",
+    "    # for key, metrics in metric_result.items():\n",
+    "    #   print(key)\n",
+    "    #   for name, value in metrics.items():\n",
+    "    #     print(f\"\\t{name}:\\t{value}\")\n",
+    "    agregated_metrics = dict()\n",
+    "    for method_name, metrics_value in metric_result.items():\n",
+    "      agregated_metrics[method_name] = sum(metrics_value.values())\n",
+    "    sorted_methods = sorted(agregated_metrics.items(), key=lambda item: item[1])\n",
+    "    # print(sorted_methods)\n",
+    "    # todo: get best with the largest compress ratio\n",
+    "    best_method_name = sorted_methods[0][0]\n",
+    "    return self.compressors[best_method_name]\n",
     "\n",
     "AlgorythmSelector().get_best(measurements)"
    ]
@@ -201,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
