Select best algo

--- a/sandbox/notebook_select_best_classic.ipynb
+++ b/sandbox/notebook_select_best_classic.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.signal_generator import SignalGenerator\n",
     "from src.metrics import Metric\n",
     "from src.data_type import Measurement\n",
-    "# import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "from src.data_compressor.other import CompressNTHS\n",
     "from src.data_compressor.other import CompressMinMax\n",
     "from src.data_compressor.other import CompressPWP\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<src.data_compressor.other.compress_nths.CompressNTHS at 0x10a44e910>"
+       "<src.data_compressor.pip.compress_pip_ed.CompressPIP_ED at 0x116bf8580>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,18 @@
     "    self.metrics_containter = Metric()\n",
     "    self.compressors: Dict[str, Compressor] = {\n",
     "      'CompressNTHS': CompressNTHS(),\n",
-    "      'CompressMinMax': CompressMinMax()\n",
+    "      'CompressMinMax': CompressMinMax(),\n",
+    "      'CompressPWP': CompressPWP(),\n",
+    "      'CompressPIP_ED': CompressPIP_ED(),\n",
+    "      'CompressPIP_PD': CompressPIP_PD(),\n",
+    "      'CompressPIP_VD': CompressPIP_VD(),\n",
+    "      'CompressPAA': CompressPAA(),\n",
+    "      'CompressPAAVI': CompressPAAVI(),\n",
+    "      'CompressByChunk': CompressByChunk(),\n",
+    "      'CompressAPCADFT': CompressAPCADFT(),\n",
+    "      'CompressAPCAFFT': CompressAPCAFFT(),\n",
+    "      'CompressSTC': CompressSTC(),\n",
+    "      'CompressHigherDeriveration': CompressHigherDeriveration(),\n",
     "    }\n",
     "\n",
     "  def set_metrics(self):\n",
@@ -135,7 +146,7 @@
     "    agregated_metrics = dict()\n",
     "    for method_name, metrics_value in metric_result.items():\n",
     "      agregated_metrics[method_name] = sum(metrics_value.values())\n",
-    "    sorted_methods = sorted(agregated_metrics.items(), key=lambda item: item[1])\n",
+    "    sorted_methods = sorted(agregated_metrics.items(), key=lambda item: -item[1])\n",
     "    # print(sorted_methods)\n",
     "    # todo: get best with the largest compress ratio\n",
     "    best_method_name = sorted_methods[0][0]\n",
